 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS
 
OPTIMIZATIONS
 
BUG FIXES


Release 0.18.0 - Unreleased
 
INCOMPATIBLE CHANGES

PIG-5282: Upgade to Java 8 (satishsaley via rohini)
 
IMPROVEMENTS

PIG-5437: Add lib and idea folder to .gitignore (maswin via rohini)

PIG-5436: update owasp version (knoguchi via rohini)

PIG-5434: Migrate from log4j to reload4j (rohini)

PIG-5417: Replace guava's Files.createTempDir() (xiaoheipangzi via rohini)

PIG-5429: Update hbase version from 2.0.0 to 2.4.14 (knoguchi)

PIG-5428: Update hadoop2,3 and tez to recent versions (knoguchi)

PIG-5422: Upgrade guava/groovy dependency (knoguchi via rohini)

PIG-5421: Upgrade commons dependencies (knoguchi via rohini)

PIG-5253: Pig Hadoop 3 support (nkollar,szita via rohini)

PIG-5377: Move supportsParallelWriteToStoreLocation from StoreFunc to StoreFuncInterfce (kpriceyahoo via rohini)

PIG-5398: SparkLauncher does not read SPARK_CONF_DIR/spark-defaults.conf (knoguchi)

PIG-5397: Update spark2.version to 2.4.8 (knoguchi)

PIG-5400: OrcStorage dropping struct(tuple) when it only holds a single field inside a Bag(array) (knoguchI)

PIG-4764: Make Pig work with Hive 3.1 (szita)

PIG-5352: Please add OWASP Dependency Check to the build ivy.xml (knoguchi)

PIG-5385: Skip calling extra gc() before spilling large bag when unnecessary (knoguchi)

PIG-5389: Passing null to REPLACE udf preventing JIT optimization (knoguchi)

PIG-5382: Log the name when POStore fails on write (knoguchi)

PIG-5255: Improvements to bloom join (satishsaley via rohini)

PIG-5359: Reduce time spent in split serialization (satishsaley via rohini)
